<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:onClick="onNavigationItemSelected"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_location"
            android:icon="@drawable/ic_location"
            android:onClick="onNavigationItemSelected"
            android:title="@string/menu_location" />
        <item
            android:id="@+id/nav_contract"
            android:icon="@drawable/ic_contacts"
            android:onClick="onNavigationItemSelected"
            android:title="@string/menu_contract" />
        <item
            android:id="@+id/nav_signOut"
            android:icon="@drawable/ic_menu_exit"
            android:onClick="onNavigationItemSelected"
            android:title="@string/menu_signOut" />
        <item
            android:id="@+id/nav_rating"
            android:icon="@drawable/ic_rate_review"
            android:onClick="onNavigationItemSelected"
            android:title="@string/menu_rating" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:onClick="onNavigationItemSelected"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:onClick="onNavigationItemSelected"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
