<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/W_Sky"
    android:padding="5dp"
    tools:context=".SignUpActivity">

    <EditText
        android:id="@+id/SignUpEmail_EditText_ID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/SignIn_EditText_Hint"
        android:textColor="@color/Black"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColorHint="@color/White">
    </EditText>

    <EditText
        android:id="@+id/SignUpPassword_EditText_ID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/SignInPassword_EditText_Hint"
        android:textColor="@color/Black"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColorHint="@color/White">
    </EditText>

    <Button
        android:id="@+id/SignUpButton_ID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/SignUpButton_Hint"
        android:textColor="@color/Orange"
        android:onClick="onClick"
        android:textAppearance="?android:attr/textAppearanceMedium">
    </Button>

    <TextView
        android:id="@+id/SignIn_TextView_ID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:onClick="onClick"
        android:text="@string/SignIn_TextView_Hint"
        android:textColor="@color/Orange">
    </TextView>

    <ProgressBar
        android:id="@+id/SignUpProgressBar_ID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center">
    </ProgressBar>


</LinearLayout>